# shm-ringbuf

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
benches/: ringbuf.rs  ringbuf_spsc.rs
examples/: consumer.rs  multi_thread_producer.rs  producer.rs  throughput_consumer.rs  throughput_producer.rs
proto/: shm.proto
share-ringbuf/: Cargo.toml
share-ringbuf/src/: data_block.rs  error.rs  lib.rs  macros.rs  ringbuf.rs
shm-client/: Cargo.toml
shm-ringbuf/: Cargo.toml
shm-ringbuf/src/: ringbuf.rs
shm-server/: Cargo.toml
src/: consumer.rs  data_block.rs  error.rs  fd_pass.rs  fdpass.rs  grpc.rs  lib.rs  memfd.rs  producer.rs  ringbuf.rs
src/consumer/: decode.rs  process.rs  rings_store.rs  session_manager.rs  settings.rs
src/data_block/: header.rs
src/grpc/: client.rs  mod.rs  server.rs  status_code.rs
src/producer/: connection.rs  fetch.rs  heartbeat.rs  prealloc.rs  settings.rs
src/ringbuf/: data_block.rs  metadata.rs
tests/: common.rs  main.rs  ringbuf_spsc.rs  test_ringbuf_spsc.rs
tests/ringbuf/: mod.rs  mpsc.rs  spsc.rs  timeout.rs
