[package]
name = "shm-ringbuf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
dashmap = { version = "5.5" }
memfd = { version = "0.6" }
nix = { version = "0.28", features = ["mman"] }
passfd = { git = "https://github.com/polachok/passfd.git", rev = "d55881752c16aced1a49a75f9c428d38d3767213", features = ["async"] }
uuid = { version = "1.7", features = ["v4"] }
snafu = { version = "0.8" }
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1" }

[dev-dependencies]
tracing-subscriber = { version = "0.3" }
