[package]
name = "shm-ringbuf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
benchmark = []

[dependencies]
async-trait = { version = "0.1" }
dashmap = { version = "5.5" }
nix = { version = "0.29", features = ["mman", "fs"] }
passfd = { git = "https://github.com/polachok/passfd.git", rev = "d55881752c16aced1a49a75f9c428d38d3767213", features = ["async"] }
prost = { version = "0.12" }
uuid = { version = "1.7", features = ["v4"] }
snafu = { version = "0.8" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", default-features = false, features = ["net"] }
tokio-util = { version = "0.7" }
tonic = { version = "0.11" }
tower = { version = "0.4" }
tracing = { version = "0.1" }

[dev-dependencies]
criterion = { version = "0.5" }
tempfile = { version = "3.2" }
tracing-subscriber = { version = "0.3" }

[build-dependencies]
tonic-build = "0.11"

[[bench]]
name = "ringbuf"
harness = false

[profile.release]
debug = 1
